# sdk-go

./: .gitignore  .mockery.yaml  MIGRATION.md  README.md  RELEASING.md  api.go  awakeables.go  buf.gen.yaml  buf.yaml  codec.go  context.go  descriptor.binpb  dynrpc.go  dynrpc_test.go  error.go  error_test.go  facilitators.go  futures.go  generate.go  go.mod  go.sum  handler.go  ingress.go  ingress_test.go  internal.buf.gen.yaml  invocation_options.go  mock.go  mock_test.go  options.go  promises.go  random.go  reflect.go  reflect_test.go  restate.go  retry_options.go  router.go  rpc.go  run.go  service_definition.go  signals.go  (+3 more)
.github/workflows/: docker.yaml  integration.yaml  test.yaml
.tools/: build-core.sh  gen-mocks.sh  release.sh  run-sdk-tests.sh
client/: client.go  workflow.go
docs/: ingress.md
encoding/: encoding.go  encoding_test.go
example/: checkout.go  main.go  ticket_service.go  user_session.go  utils.go
examples/client/: go.mod  go.sum  main.go
ingress/: client.go  ingress.go  ingress_test.go  invocation_handle.go  mock_server_test.go  options.go  requester.go  send_requester.go
interfaces/: interfaces.go
internal/: discovery.go  dynrpc.go  dynrpc_test.go
logging/: context.go
mocks/: helpers.go  mock_AfterFuture.go  mock_AttachFuture.go  mock_AwakeableFuture.go  mock_Client.go  mock_Context.go  mock_DurablePromise.go  mock_Invocation.go  mock_Rand.go  mock_ResponseFuture.go  mock_RunAsyncFuture.go  mock_Selector.go  mock_WaitIterator.go
proto/: buf.yaml  internal.proto
protoc-gen-go-restate/: README.md  main.go  restate.go
rcontext/: rcontext.go
router/: error.go  error_test.go  handler.go  router.go
server/: conn.go  lambda.go  restate.go  stream.go  stream_test.go
shared-core/: Cargo.toml
shared-core/.cargo/: config.toml
shared-core/pkg/sumdb/sum.golang.org/: latest
shared-core/src/: lib.rs
test/: main.go
test-services/: .env  .gitignore  README.md  awakeableholder.go  blockandwaitworkflow.go  canceltest.go  coordinator.go  counter.go  exclusions.yaml  failing.go  go.mod  go.sum  interpreter.go  kill.go  listobject.go  main.go  mapobject.go  nondeterministic.go  protojsontest.go  proxy.go  receiver.go  registry.go  testutils.go  upgradetest.go  virtualobjectinterpreter.go
testing/: go.mod  go.sum  test_env.go  test_env_test.go
(+141 files in other folders)
