[package]
name = "shared-core-golang-wasm-binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
restate-sdk-shared-core = { git = "https://github.com/restatedev/sdk-shared-core.git", rev = "f91441af9b524d86c1e6b3adb4dc002202214262" }
bytes = "1.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std"] }
prost = "0.14.3"

[build-dependencies]
prost-build = "0.14.3"

# Below settings dramatically reduce wasm output size
# See https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-sizewasm-opt -Oz -o
# See https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
[profile.release]
opt-level = 3
lto = true
